# vibetrimright

./: LICENSE  README.md  pyproject.toml
src/vibetrimright/: __init__.py  ai.py
tests/: test_vibetrimright.py
