[project]
name = "vibetrimright"
version = "0.1.1"
description = "String right-trimming library that uses GPT to remove trailing whitespace"
readme = "README.md"
authors = [
    { name = "Taha Parker", email = "tahayparker@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.95.1",
    "pydantic>=2.11.7",
    "typing-extensions>=4.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]